--- a/css/styles.css
+++ b/css/styles.css
@@ -57,11 +57,11 @@ span {color: aqua;}
 
 .portfolio-headings { width: 100%; padding: 5em; }
 
-.portfolio-headings h2 { font-size: 2.5em;}
+.portfolio-headings h3 { font-size: 2.5em;}
 
 .portfolio .container {width: 80vw; height: 80vh; margin: 0 auto; display: flex; justify-content: center;}
 
-.card {width: 300px;}
+.card {width: 300px; background-color: rgb(212, 211, 109); height: 335px; z-index: 1; }
 
 .card_img {width: 100%; height: 150px; background-image: url(); background-size: cover; opacity: 1;}
 
@@ -73,8 +73,11 @@ span {color: aqua;}
 
 .card_project_links i {font-size: 2em;}
 
-.card .project_details{display: flex; }
+.card .project_details.a{display: flex; justify-content: center; margin: 1em; align-self: center; }
 
+.project_details_content {display: flex; width: 100%; justify-content: center; margin-top: 1em;}
+
+.card .project_details a{ text-decoration: none; color: #191c32;}
 
 
 
