--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,9 @@ span {color: aqua;}
 
 .download-cv:hover {background-color: #fff; box-shadow: none;}
 
-.main img {width: 450px; border: 7px solid aqua; height: 520px; margin: 0 auto;}
+.main img {width: 450px; border: 7px solid aqua; height: 490px; margin: 0 auto;}
+
+/* ---------ABOUT----------------- */
 
 .about {display: grid; grid-template-columns: repeat(10, 1fr); width: 100vw;}
 
@@ -55,13 +57,15 @@ span {color: aqua;}
 
 /* --------CARDS -------------*/
 
+.portfolio { width: 100vw;}
+
 .portfolio-headings { width: 100%; padding: 5em; }
 
 .portfolio-headings h3 { font-size: 2.5em;}
 
 .portfolio .container {width: 80vw; height: 80vh; margin: 0 auto; display: flex; justify-content: center;}
 
-.card {width: 300px; background-color: rgb(212, 211, 109); height: 335px; z-index: 1; }
+.card {width: 300px; background-color: #101e4b; z-index: 1; color: #fff; height: 350px; }
 
 .card_img {width: 100%; height: 150px; background-image: url(); background-size: cover; opacity: 1;}
 
