--- a/css/styles.css
+++ b/css/styles.css
@@ -7,81 +7,185 @@ body {font-family: font-family: 'Montserrat', sans-serif; font-family: 'Roboto',
 /* -----------WRAPPER -------- */
 
 .wrapper,
-.portfolio { width: 100vw; height: 100vh; background-color: #191c32;}
+.portfolio { 
+    width: 100vw; 
+    height: 100vh; 
+    background-color: #191c32;
+}
 
-.navbar{ display: flex; justify-content: space-between; padding: 2em;}
+.navbar{ 
+    display: flex; 
+    justify-content: space-between; 
+    padding: 2em;
+}
 
 .brand {margin-top: -7px;}
 
 .brand span {color: aqua;}
 
-.menu {display: flex; width: 50%; justify-content: space-around;}
+.menu {
+    display: flex; 
+    width: 50%; 
+    justify-content: space-around;}
 
 .menu li {list-style: none;}
 
-.menu a {color: #fff; text-decoration: none;padding: 10px 20px; transition: ease-in .8s;}
+.menu a {
+    color: #fff; 
+    text-decoration: none;
+    padding: 10px 20px; 
+    transition: ease-in .8s;}
 
 .menu .active{ color: aqua;}
 
-.menu a:hover {background-color: aqua; color: #191c32;}
+.menu a:hover {
+    background-color: aqua; 
+    color: #191c32;
+}
 
 /* --------MAIN---------- */
 
-.main {margin: 0 auto; width: 80vw; height: 80vh; display: grid; grid-template-columns: repeat(2,1fr); align-items: center;}
+.main {
+    margin: 0 auto; 
+    width: 80vw; 
+    height: 80vh; 
+    display: grid; 
+    grid-template-columns: repeat(2,1fr); 
+    align-items: center;
+}
 
 h1{ font-size: 3em;}
 
-.main-p {color: white; margin-top: 4px; line-height: 1.5em;}
+.main-p {
+    color: white; 
+    margin-top: 4px; 
+    line-height: 1.5em;
+}
 
 span {color: aqua;}
 
-.download-cv {padding: 10px 20px; background-color: aqua; border: none; border-radius: 20px; margin-top: 20px; cursor: pointer; box-shadow: 1px 3px 11px 5px rgba(102, 331, 200, 69);}
+.download-cv {
+    padding: 10px 20px; 
+    background-color: aqua; 
+    border: none; 
+    border-radius: 20px; 
+    margin-top: 20px; 
+    cursor: pointer; 
+    box-shadow: 1px 3px 11px 5px rgba(102, 331, 200, 69);
+}
 
-.download-cv:hover {background-color: #fff; box-shadow: none;}
+.download-cv:hover {
+    background-color: #fff; 
+    box-shadow: none;
+}
 
-.main img {width: 450px; border: 7px solid aqua; height: 490px; margin: 0 auto;}
+.main img {
+    width: 450px; 
+    border: 7px solid aqua; 
+    height: 490px; margin: 0 auto;}
 
 /* ---------ABOUT----------------- */
 
-.about {display: grid; grid-template-columns: repeat(10, 1fr); width: 100vw;}
+.about {
+    display: grid; 
+    grid-template-columns: repeat(10, 1fr); 
+    width: 100vw;
+}
 
-.about img { width: 100%;grid-column: 1/5; height: 520px; z-index: -9;}
+.about img { 
+    width: 100%;
+    grid-column: 1/5; 
+    height: 520px; 
+    z-index: -9;
+}
 
 .about-info { grid-column: 5/10; padding: 3em;}
 
-.about-info h2 {font-size: 2em; color: #191c32; margin-top: 5em; align-items: center;}
+.about-info h2 {
+    font-size: 2em; 
+    color: #191c32; 
+    margin-top: 5em; 
+    align-items: center;}
 
-.divider {height: 3px; width: 89px; background-color: aqua; margin-top: 1px;margin-bottom: 30px;}
+.divider {
+    height: 3px; 
+    width: 89px; 
+    background-color: aqua; 
+    margin-top: 1px;
+    margin-bottom: 30px;
+}
 
 .about p { margin-bottom: 1em;}
 
-/* --------CARDS -------------*/
+/* --------PORTFOLIO -------------*/
 
 .portfolio { width: 100vw;}
 
-.portfolio-headings { width: 100%; padding: 5em; }
+.portfolio-headings { 
+    width: 100vw; 
+    display: flex; 
+    flex-direction:column; 
+    margin: 5em; 
+    padding: 5em;
+}
 
 .portfolio-headings h3 { font-size: 2.5em;}
 
-.portfolio .container {width: 80vw; height: 80vh; margin: 0 auto; display: flex; justify-content: center;}
+.portfolio .container {
+    width: 80vw; 
+    height: 80vh; 
+    margin: 0 auto; 
+    display: flex; 
+    justify-content: center;
+}
 
-.card {width: 300px; background-color: #101e4b; z-index: 1; color: #fff; height: 350px; }
+.card {
+    width: 300px; 
+    background-color: #101e4b; 
+    z-index: 1; 
+    color: #fff; 
+    height: 350px; 
+    margin: 1em;
+}
 
-.card_img {width: 100%; height: 150px; background-image: url(); background-size: cover; opacity: 1;}
+.card_img {
+    width: 100%; 
+    height: 150px; 
+    background-image: url(); 
+    background-size: cover; 
+    opacity: 1;}
 
 .card_title {padding: 20px;}
 
-.card_project_links {display: flex; justify-content: space-evenly;}
+.card_project_links {
+    display: flex; 
+    justify-content: space-evenly;
+}
 
-.card_project_links a {color: #fff; text-decoration: none; }
+.card_project_links a {
+    color: #fff; 
+    text-decoration: none;
+}
 
-.card_project_links i {font-size: 2em;}
+.card .project_links i {font-size: 2em;}
 
-.card .project_details.a{display: flex; justify-content: center; margin: 1em; align-self: center; }
+.card .project_details.a{
+    display: flex; 
+    justify-content: center; 
+    margin: 1em; 
+    align-self: center; 
+}
 
-.project_details_content {display: flex; width: 100%; justify-content: center; margin-top: 1em;}
+.project_details_content {
+    display: 
+    flex; width: 100%; 
+    justify-content: center; 
+    margin-top: 1em;
+}
 
-.card .project_details a{ text-decoration: none; color: #191c32;}
+.card .project_details a{ 
+    text-decoration: none; color: #191c32;
+}
 
 
 
