--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,7 @@ body {font-family: font-family: 'Montserrat', sans-serif; font-family: 'Roboto',
 
 /* -----------WRAPPER -------- */
 
-.wrapper,
-.portfolio { 
+.wrapper { 
     width: 100vw; 
     height: 100vh; 
     background-color: #191c32;
@@ -119,13 +118,14 @@ span {color: aqua;}
 
 /* --------PORTFOLIO -------------*/
 
-.portfolio { width: 100vw;}
+.portfolio { 
+    width: 100vw; 
+    background-color: #191c32;
+    color: #fff;
+}
 
 .portfolio-headings { 
     width: 100vw; 
-    display: flex; 
-    flex-direction:column; 
-    margin: 5em; 
     padding: 5em;
 }
 
@@ -135,57 +135,64 @@ span {color: aqua;}
     width: 80vw; 
     height: 80vh; 
     margin: 0 auto; 
-    display: flex; 
+    display: flex;
+    align-items: center;
     justify-content: center;
 }
 
 .card {
     width: 300px; 
     background-color: #101e4b; 
-    z-index: 1; 
     color: #fff; 
-    height: 350px; 
     margin: 1em;
+    height: 350px;
 }
 
 .card_img {
     width: 100%; 
     height: 150px; 
-    background-image: url(); 
+    background-image: url(/img/codigo.jpeg); 
     background-size: cover; 
-    opacity: 1;}
-
-.card_title {padding: 20px;}
-
-.card_project_links {
-    display: flex; 
-    justify-content: space-evenly;
 }
 
-.card_project_links a {
+.card_title {
+    padding: 20px; 
+    text-align: center;
+}
+
+.card .project_links {
+    display: flex; 
+    justify-content: space-evenly;
+    margin-top: 7em;
+}
+
+.card .project_links a {
     color: #fff; 
     text-decoration: none;
 }
 
-.card .project_links i {font-size: 2em;}
+.card .project_links i {font-size: 1.5em;}
 
-.card .project_details.a{
-    display: flex; 
-    justify-content: center; 
+.card .project_details {
+    margin: 0 auto;
     margin: 1em; 
-    align-self: center; 
+    width: 70%;
 }
 
-.project_details_content {
-    display: 
-    flex; width: 100%; 
+.card .project_details_content a{ 
+    text-decoration: none; 
+    color: #191c32;
+    text-transform: uppercase;    
+}
+
+.card .project_details_content {
+    display:flex; 
     justify-content: center; 
     margin-top: 1em;
+    width: 100%;  
 }
 
-.card .project_details a{ 
-    text-decoration: none; color: #191c32;
-}
+
 
 
 
