--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,8 @@ body {font-family: font-family: 'Montserrat', sans-serif; font-family: 'Roboto',
 .menu {
     display: flex; 
     width: 50%; 
-    justify-content: space-around;}
+    justify-content: space-around;
+}
 
 .menu li {list-style: none;}
 
@@ -190,6 +191,60 @@ span {color: aqua;}
     justify-content: center; 
     margin-top: 1em;
     width: 100%;  
+}
+
+/* -------CONTACT-SECTION-------- */
+
+.contact-headings h2{
+    font-size: 3em;
+
+}
+
+.container-contact{
+    padding: 3em;
+    margin: 0 auto;
+}
+
+.container-contact img{
+    width: 750px;
+    height: 700px;
+    bottom: 0px;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    width: 30vw;
+    margin-top: 2em;
+}
+
+.form input {
+    padding: 10px 20px;
+    margin-bottom: 1em;
+    background: none;
+    border: none;
+    border-bottom: 1px solid #fff;
+    color: #fff;
+}
+
+.form textarea {
+    height: 150px;
+    background: none;
+    color: #fff;
+    padding: 1.5em;
+    border: 1px solid #fff;
+}
+
+.btn_submit {
+    padding: 10px 20px;
+    margin: 1em;
+    border: none;
+    text-transform: uppercase;
+    background-color: aqua;
+    border-radius: 20px;
+    cursor: pointer;
+    box-shadow: 1px 3px 11px 5px rgba(102, 331, 200, 69);
+
 }
 
 
