--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,11 @@ span {color: aqua;}
 .main img {
     width: 450px; 
     border: 7px solid aqua; 
-    height: 490px; margin: 0 auto;}
+    height: 420px; 
+    margin: 0 auto;
+    margin-left: 90px;
+}
+
 
 /* ---------ABOUT----------------- */
 
@@ -90,6 +94,8 @@ span {color: aqua;}
     display: grid; 
     grid-template-columns: repeat(10, 1fr); 
     width: 100vw;
+    align-items: center;
+    
 }
 
 .about img { 
@@ -97,6 +103,7 @@ span {color: aqua;}
     grid-column: 1/5; 
     height: 520px; 
     z-index: -9;
+    align-content: center;
 }
 
 .about-info { grid-column: 5/10; padding: 3em;}
@@ -195,6 +202,10 @@ span {color: aqua;}
 
 /* -------CONTACT-SECTION-------- */
 
+.contact-section {
+    background-color: #191c32;
+}
+
 .contact-headings h2{
     font-size: 3em;
 
@@ -263,8 +274,13 @@ span {color: aqua;}
 
 .footer-content h2{
     font-size: 3em;
-    
+
 }
+
+.footer-content h2{
+    font-size: 1.5em;
+}
+
 
 
 
