--- a/css/styles.css
+++ b/css/styles.css
@@ -101,9 +101,9 @@ span {color: aqua;}
 .about img { 
     width: 100%;
     grid-column: 1/5; 
-    height: 520px; 
-    z-index: -9;
+    height: 100vh; 
     align-content: center;
+    margin-left: 20px;
 }
 
 .about-info { grid-column: 5/10; padding: 3em;}
@@ -112,7 +112,8 @@ span {color: aqua;}
     font-size: 2em; 
     color: #191c32; 
     margin-top: 5em; 
-    align-items: center;}
+    text-align: center;
+}
 
 .divider {
     height: 3px; 
@@ -120,9 +121,27 @@ span {color: aqua;}
     background-color: aqua; 
     margin-top: 1px;
     margin-bottom: 30px;
+    margin-left: 139px;
 }
 
-.about p { margin-bottom: 1em;}
+.about p { 
+    margin-bottom: 1em;
+}
+
+.download-cv {
+    padding: 10px 20px; 
+    background-color: aqua; 
+    border: none; 
+    border-radius: 20px; 
+    margin-top: 30px; 
+    cursor: pointer; 
+    box-shadow: 1px 3px 11px 5px rgba(102, 331, 200, 69);
+    width: 15vw;
+    height: 6vh;
+    text-align: center;
+    margin-left:75px;
+
+}
 
 /* --------PORTFOLIO -------------*/
 
@@ -242,7 +261,12 @@ span {color: aqua;}
     width: 30vw;
     margin-top: 2em;
     margin-left: 50px;
+}
 
+.contact-form h4:hover{
+    cursor: pointer;
+    font-size: 30px;
+    transition: .5s ease-in;
 }
 
 .form {
@@ -259,13 +283,20 @@ span {color: aqua;}
     background: none;
     border: none;
     border-bottom: 1px solid #fff;
-    color: #fff;
+    color: rgb(241, 229, 229)
+}
+
+.form input:hover{
+    cursor: pointer;
+    color: rgb(241, 229, 229)
+    font-size: 20px;
+    transition: .5s ease-in;
 }
 
 .form textarea {
     height: 150px;
     background: none;
-    color: #fff;
+    color: hsl(71, 83%, 61%);
     padding: 1.5em;
     border: 1px solid #fff;
 }
@@ -298,13 +329,26 @@ span {color: aqua;}
 
 .footer-content h2{
     font-size: 3em;
-
+    color: #fff;
 }
 
-.footer-content h2{
+.footer-content h3{
     font-size: 1.5em;
+    text-align: center;
 }
 
+.social-network ul{
+    margin-top: 3em;
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    width: 300px;
+}
+
+.social-network ul li a i{
+    border-radius: 20px;
+    
+}
 
 
 
